--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,24 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="nav-bar">
+  <div class="links">
+    <div class="ed"> EDOUARD NARDON </div>
+    <div class="info"> INFORMATION </div>
+  </div>
+  <div id="box">
+    <span class="txt t1"> HELLO, MY NAME IS EDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS. &nbsp;
+    </span>
+    <span class="txt t2"> HELLO, MY NAME IS EDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS.
+    </span>
+    <span class="txt t2"> HELLO, MY NAME IS EDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS.
+    </span>
+    <span class="txt t2"> HELLO, MY NAME IS EDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS.
+    </span>
+    <span class="txt t2"> HELLO, MY NAME IS EDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS.
+    </span>
+    <span class="txt t2"> HELLO, MY NAME IS EDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS.
+    </span>
+    <span class="txt t2"> HELLO, MY NAME IS EDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS.
+    </span>
+    <span class="txt t2"> HELLO, MY NAME IS EDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS.
+    </span>
+  </div>
+</div>
