--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,22 +3,12 @@
     <div class="ed"> EDOUARD NARDON </div>
     <div class="info"> INFORMATION </div>
   </div>
-  <div id="box">
-    <span class="txt t1"> HELLO, MY NAME IS EDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS. &nbsp;
-    </span>
-    <span class="txt t2"> HELLO, MY NAME IS EDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS.
-    </span>
-    <span class="txt t2"> HELLO, MY NAME IS EDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS.
-    </span>
-    <span class="txt t2"> HELLO, MY NAME IS EDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS.
-    </span>
-    <span class="txt t2"> HELLO, MY NAME IS EDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS.
-    </span>
-    <span class="txt t2"> HELLO, MY NAME IS EDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS.
-    </span>
-    <span class="txt t2"> HELLO, MY NAME IS EDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS.
-    </span>
-    <span class="txt t2"> HELLO, MY NAME IS EDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS.
-    </span>
+  <div id="box" class="loop-holder">
+    <div class="txt loop-holder__text"> HELLO, MY NAME IS EDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS. &nbsp;
+    </div>
+    <div class="txt loop-holder__text"> HELLO, MY NAME IS EDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS. &nbsp;
+    </div>
+    <div class="txt loop-holder__text"> HELLO, MY NAME IS EDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS. &nbsp;
+    </div>
   </div>
 </div>
