--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -11,25 +11,32 @@
  justify-content: center;
  display: flex;
  padding: 0.6rem;
+ text-decoration: none;
+ color: black;
+}
+
+.ed:hover, .info:hover {
+  color: blue;
 }
 
 .loop-holder {
   display: flex;
   white-space: nowrap;
   overflow: hidden;
+  border-bottom: 1px solid black;
 }
 .loop-holder__text {
     animation: textLoop 20s linear infinite;
-    font-size: 2vw;
-    padding-right: .35em;
+    font-size: 1.2vw;
+    padding-right: 0.15em;
 }
 @keyframes textLoop {
     0% {
-        -webkit-transform: translate3d(0, 0, 0);
-        transform: translate3d(0, 0, 0)
+        -webkit-transform: translate(0, 0);
+        transform: translate(0, 0);
     }
     100% {
-        -webkit-transform: translate3d(-100%, 0, 0);
-        transform: translate3d(-100%, 0, 0)
+        -webkit-transform: translate(-100%, 0);
+        transform: translate(-100%, 0);
     }
 }
