--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,14 +1,14 @@
 <div class="nav-bar">
-  <div class="links">
-    <div class="ed"> EDOUARD NARDON </div>
-    <div class="info"> INFORMATION </div>
+  <div class="links" id="graphist">
+    <%= link_to "EDOUARD NARDON", root_path(anchor:"graphist"), class:"ed" %>
+    <%= link_to "INFORMATION", root_path(anchor: "description"), class:"info" %>
   </div>
   <div class="loop-holder">
-    <div class="txt loop-holder__text"> HELLO, MY NAME IS EDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS. &nbsp;
+    <div class="loop-holder__text"> HELLO, MY NAME IS EDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS. &nbsp;
     </div>
-    <div class="txt loop-holder__text"> HELLO, MY NAME IS EDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS. &nbsp;
+    <div class="loop-holder__text"> HELLO, MY NAME IS EDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS. &nbsp;
     </div>
-    <div class="txt loop-holder__text"> HELLO, MY NAME IS EDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS. &nbsp;
+    <div class="loop-holder__text"> HELLO, MY NAME IS EDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS. &nbsp;
     </div>
   </div>
 </div>
