need pictures to carrousel

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,14 +1,16 @@
 <div class="nav-bar">
   <div class="links" id="graphist">
-    <%= link_to "EDOUARD NARDON", root_path(anchor:"graphist"), class:"ed" %>
+    <%= link_to "ÉDOUARD NARDON", root_path(anchor:"graphist"), class:"ed" %>
     <%= link_to "INFORMATION", root_path(anchor: "description"), class:"info" %>
   </div>
   <div class="loop-holder">
-    <div class="loop-holder__text"> HELLO, MY NAME IS EDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS. &nbsp;
+    <div class="loop-holder__text"> HELLO, MY NAME IS ÉDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS. &nbsp;
     </div>
-    <div class="loop-holder__text"> HELLO, MY NAME IS EDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS. &nbsp;
+    <div class="loop-holder__text"> HELLO, MY NAME IS ÉDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS. &nbsp;
     </div>
-    <div class="loop-holder__text"> HELLO, MY NAME IS EDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS. &nbsp;
+    <div class="loop-holder__text"> HELLO, MY NAME IS ÉDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS. &nbsp;
     </div>
   </div>
 </div>
+<div class="carrousel"></div>
+<div id="description"> HELLO, MY NAME IS ÉDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS. FOR ANY ENQUIRIES, PLEASE SEND ME AN EMAIL <a href = "mailto: edouardnardon@gmail.com" class="mail">HERE</a> </div>
