--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,18 +1,32 @@
 // Specific CSS for your home-page
+.nav-bar {
+  position: -webkit-sticky;
+	position: sticky;
+	top: 0;
+  z-index: 3;
+  background-color: white;
+}
 
 .links {
   display: flex;
   flex-direction: row;
 }
 
+.ed {
+  border-right: 1px solid black;
+}
+
 .ed, .info {
-  border: 1px solid black;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  border-left: 0 solid black;
   width: 50vw;
  justify-content: center;
  display: flex;
  padding: 0.6rem;
  text-decoration: none;
  color: black;
+ font-size: 1.1em;
 }
 
 .ed:hover, .info:hover {
@@ -27,7 +41,7 @@
 }
 .loop-holder__text {
     animation: textLoop 20s linear infinite;
-    font-size: 1.2vw;
+    font-size: 0.9em;
     padding-right: 0.15em;
 }
 @keyframes textLoop {
@@ -39,4 +53,11 @@
         -webkit-transform: translate(-100%, 0);
         transform: translate(-100%, 0);
     }
+}
+
+.carrousel {
+  height: 90vh;
+  background-color: rgba(17, 0, 255, 0.171);
+  border-bottom: 1px solid black;
+  z-index: 1;
 }
