--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,8 +1,8 @@
 // Import Google fonts
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&family=EB+Garamond&display=swap');
 
 // Define fonts for body and headers
-$body-font: 'EB Garamond', 'serif';
+$body-font: 'Cormorant Garamond', 'serif';
 $headers-font: 'EB Garamond', 'serif';
 
 // To use a font file (.woff) uncomment following lines
