ready for stretching

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,9 +15,17 @@
 <div class="carrousel">
 </div>
 <div id="description" class="shrink"> 
-  <p class="txt">HELLO, MY NAME IS ÉDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS. FOR ANY ENQUIRIES, PLEASE SEND ME AN EMAIL
+  <p class="txt top">HELLO, MY NAME IS ÉDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS. FOR ANY ENQUIRIES, PLEASE SEND ME AN EMAIL
+  <a href = "mailto:edouardnardon@gmail.com" class="mail txt top">HERE</a>
+  </p> 
+  <div class="stretch">
+    <p class="txt inner">HELLO, MY NAME IS ÉDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS. FOR ANY ENQUIRIES, PLEASE SEND ME AN EMAIL
+    <a href = "mailto:edouardnardon@gmail.com" class="mail txt inner">HERE</a>
+    </p> 
+  </div>
+  <p class="txt bottom">HELLO, MY NAME IS ÉDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS. FOR ANY ENQUIRIES, PLEASE SEND ME AN EMAIL
+    <a href = "mailto:edouardnardon@gmail.com" class="mail txt bottom">HERE</a> 
   </p>
-  <a href = "mailto:edouardnardon@gmail.com" class="mail txt">HERE</a> 
 </div>
 <div class="back">
   <%= link_to root_path(anchor:"up") do %>
