--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -66,24 +66,26 @@
 .shrink {
   font-size: 6rem;
   text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  position: absolute;
+  top: 115%;
+  left: 16%;
 }
 
 .txt {
   width: 68vw;
   line-height: 7rem;
-  margin-top: 136px;
+  position: absolute;
+  top: 115%;
+  left: 16%;
 }
 
 .mail {
   color: black;
   text-decoration-style: dotted;
-  margin-top: -1rem;
+  margin-top: -11.9rem;
   text-decoration-thickness: 0.3rem;
   text-underline-offset: 0.6rem;
-  margin-bottom: 24vw;
+  left: 0;
 }
 
 .mail:hover {
@@ -92,6 +94,7 @@
 }
 
 .back {
-  display: flex;
-  justify-content: center;
+  position: absolute;
+  left: 48%;
+  top: 318%;
 }
