--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,18 +14,18 @@
 </div>
 <div class="carrousel">
 </div>
-<div id="description" class="shrink"> 
-  <p class="txt top">HELLO, MY NAME IS ÉDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS. FOR ANY ENQUIRIES, PLEASE SEND ME AN EMAIL
-  <a href = "mailto:edouardnardon@gmail.com" class="mail txt top">HERE</a>
-  </p> 
-  <div class="stretch">
-    <p class="txt inner">HELLO, MY NAME IS ÉDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS. FOR ANY ENQUIRIES, PLEASE SEND ME AN EMAIL
-    <a href = "mailto:edouardnardon@gmail.com" class="mail txt inner">HERE</a>
-    </p> 
-  </div>
-  <p class="txt bottom">HELLO, MY NAME IS ÉDOUARD NARDON. I AM A CREATIVE DIRECTOR BASED IN NEW YORK CITY. I SPECIALIZE IN ART, FASHION AND BEAUTY PROJECTS. FOR ANY ENQUIRIES, PLEASE SEND ME AN EMAIL
-    <a href = "mailto:edouardnardon@gmail.com" class="mail txt bottom">HERE</a> 
-  </p>
+<div class="down" id="description"> </div>
+<div class="txt">
+  <p class="txt">HELLO, MY NAME IS</p> 
+  <p class="txt"> ÉDOUARD NARDON.</p> 
+  <p class="txt">I AM A CREATIVE DIRECTOR </p>
+  <p class="txt"> BASED IN NEW YORK CITY.</p> 
+  <p class="txt"> I SPECIALIZE IN ART,</p>
+  <p class="txt"> FASHION AND BEAUTY </p>
+  <p class="txt"> PROJECTS. </p> 
+  <p class="txt"> FOR ANY ENQUIRIES,</p>
+  <p class="txt"> PLEASE SEND ME AN EMAIL </p>
+  <a href = "mailto:edouardnardon@gmail.com" class="mail">HERE</a>
 </div>
 <div class="back">
   <%= link_to root_path(anchor:"up") do %>
