--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -45,6 +45,7 @@
     font-size: 0.9em;
     padding-right: 0.15em;
 }
+
 @keyframes textLoop {
     0% {
         -webkit-transform: translate(0, 0);
@@ -63,29 +64,24 @@
   z-index: 1;
 }
 
-.shrink {
+.txt {
   font-size: 6rem;
   text-align: center;
-  position: absolute;
-  top: 115%;
-  left: 16%;
+  width: 100vw;
+  line-height: 7rem;
+  margin: auto;
 }
 
-.txt {
-  width: 68vw;
-  line-height: 7rem;
-  position: absolute;
-  top: 115%;
-  left: 16%;
+.down {
+  width: 100%;
+  height: 20vh;
 }
 
 .mail {
   color: black;
   text-decoration-style: dotted;
-  margin-top: -11.9rem;
   text-decoration-thickness: 0.3rem;
   text-underline-offset: 0.6rem;
-  left: 0;
 }
 
 .mail:hover {
