--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -64,24 +64,10 @@
   z-index: 1;
 }
 
-.txt {
-  font-size: 6rem;
-  text-align: center;
-  width: 100vw;
-  line-height: 7rem;
-  margin: auto;
-}
 
 .down {
   width: 100%;
   height: 20vh;
-}
-
-.mail {
-  color: black;
-  text-decoration-style: dotted;
-  text-decoration-thickness: 0.3rem;
-  text-underline-offset: 0.6rem;
 }
 
 .mail:hover {
@@ -93,4 +79,50 @@
   position: absolute;
   left: 48%;
   top: 318%;
+}
+
+.img-one {
+  height: 62px;
+  width: 202px;
+}
+
+.img-two {
+  height: 63px;
+  width: 383px;
+}
+
+.img-three {
+  height: 73px;
+  width: 612px;
+}
+
+.img-four {
+  height: 65px;
+  width: 854px;
+}
+
+.img-five {
+    height: 65px;
+    width: 807px;
+}
+
+.img-six {
+  height: 70px;
+  width: 634px;
+}
+
+.img-seven {
+  height: 66px;
+  width: 861px;
+}
+
+.mail {
+  height: 84px;
+  width: 191px;
+}
+
+.all-pics {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
