--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,18 +15,16 @@
 <div class="carrousel">
 </div>
 <div class="down" id="description"> </div>
-<div class="txt">
-  <p class="txt">HELLO, MY NAME IS</p> 
-  <p class="txt"> ÉDOUARD NARDON.</p> 
-  <p class="txt">I AM A CREATIVE DIRECTOR </p>
-  <p class="txt"> BASED IN NEW YORK CITY.</p> 
-  <p class="txt"> I SPECIALIZE IN ART,</p>
-  <p class="txt"> FASHION AND BEAUTY </p>
-  <p class="txt"> PROJECTS. </p> 
-  <p class="txt"> FOR ANY ENQUIRIES,</p>
-  <p class="txt"> PLEASE SEND ME AN EMAIL </p>
-  <a href = "mailto:edouardnardon@gmail.com" class="mail">HERE</a>
-</div>
+<div class="all-pics">
+ <%= image_tag("HELLOVECTO-1.png", class: "img-one") %> <br>
+ <%= image_tag("my-name-is.png", class: "img-two") %> <br>
+ <%= image_tag("edouard=nardon.png", class: "img-three") %> <br>
+ <%= image_tag("iam.png", class: "img-four") %> <br>
+ <%= image_tag("basedinny.png", class: "img-five") %> <br>
+ <%= image_tag("foranyenquiries.png", class: "img-six") %> <br>
+ <%= image_tag("pleasesend.png", class: "img-seven") %> <br>
+ <a href = "mailto:edouardnardon@gmail.com" class="mail"><%= image_tag("here.png") %></a>
+ </div>
 <div class="back">
   <%= link_to root_path(anchor:"up") do %>
     <%= image_tag("arrow.png", width: 90, height: 90) %>
