--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -68,6 +68,9 @@
 .down {
   width: 100%;
   height: 20vh;
+  position: sticky;
+  top: 0;
+  background-color: aqua;
 }
 
 .mail:hover {
@@ -121,8 +124,9 @@
   width: 191px;
 }
 
-.all-pics {
+.img {
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
 }
