need to find to increment height in an array

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,8 +15,8 @@
 <div class="carrousel">
 </div>
 <div class="down" id="description">
-</div>
-<%# <div class="all-pics" id="pics"> %>
+</div> 
+<div class="all-pics" id="pics">
   <%= image_tag("HELLOVECTO-1.png", class: "img-one img") %> <br>
   <%= image_tag("my-name-is.png", class: "img-two img") %> <br>
   <%= image_tag("edouard=nardon.png", class: "img-three img") %> <br>
@@ -25,7 +25,7 @@
   <%= image_tag("foranyenquiries.png", class: "img-six  img") %> <br>
   <%= image_tag("pleasesend.png", class: "img-seven img") %> <br>
   <a href = "mailto:edouardnardon@gmail.com" class="mail img"><%= image_tag("here.png") %></a>
-<%# </div> %>
+</div>
 <div class="back">
   <%= link_to root_path(anchor:"up") do %>
     <%= image_tag("arrow.png", width: 90, height: 90) %>
