--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -67,7 +67,7 @@
 
 .down {
   width: 100%;
-  height: 20vh;
+  height: 140px;
   position: sticky;
   top: 0;
   background-color: aqua;
@@ -124,7 +124,7 @@
   width: 191px;
 }
 
-.img {
+.all-pics {
   display: flex;
   flex-direction: column;
   align-items: center;
