--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -130,3 +130,13 @@
   align-items: center;
   position: relative;
 }
+
+.end {
+  visibility: hidden;
+}
+
+svg {
+  width: 50vw;
+  height: auto;
+  max-width: 448px;
+}
