--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,179 +17,9 @@
 <div class="down" id="description">
 </div>
 <div class="all-pics" id="pics">
-<svg
-   width="210mm"
-   height="297mm"
-   viewBox="0 0 210 297"
-   version="1.1"
-   id="svg12"
-   inkscape:version="1.1.2 (b8e25be833, 2022-02-05)"
-   xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
-   xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
-   xmlns="http://www.w3.org/2000/svg"
-   xmlns:svg="http://www.w3.org/2000/svg">
-  <defs
-     id="defs9" />
-  <g
-     inkscape:label="Calque 1"
-     inkscape:groupmode="layer"
-     id="layer1"
-     class="start">
-    <g
-       id="g248"
-       transform="matrix(0.26458333,0,0,0.26458333,-148.28788,24.190392)">
-      <g
-         id="g190">
-	<path
-   d="m 847.95,33.25 c -0.74,5.24 -0.99,8.4 -0.99,14.6 v 73.98 c 0,6.48 0.25,9.78 0.99,14.88 h -9.75 c 0.74,-4.82 0.99,-8.54 0.99,-14.88 V 86.02 h -57.5 v 35.82 c 0,6.61 0.25,10.2 0.99,14.88 h -9.75 c 0.74,-4.82 0.99,-8.4 0.99,-14.88 V 48.13 c 0,-6.34 -0.25,-10.2 -0.99,-14.88 h 9.75 c -0.74,4.96 -0.99,8.4 -0.99,14.6 v 30.17 h 57.5 v -29.9 c 0,-6.2 -0.25,-10.2 -0.99,-14.88 h 9.75 z"
-   id="path180" />
-
-	<path
-   d="m 926.43,137.69 c -3.83,-0.69 -6.91,-0.96 -13.2,-0.96 h -35.66 c -5.55,0 -8.51,0.14 -12.96,0.41 0.74,-5.1 0.99,-9.37 0.99,-15.84 V 48 c 0,-5.51 -0.25,-9.37 -0.99,-15.16 4.44,0.28 7.4,0.41 12.96,0.41 h 34.55 c 5.31,0 9.01,-0.28 13.33,-0.96 v 9.78 c -4.07,-0.69 -7.28,-0.96 -13.33,-0.96 h -38.5 v 37.2 h 32.95 c 5.31,0 8.51,-0.28 13.33,-0.96 v 9.78 c -4.2,-0.69 -7.16,-0.96 -13.33,-0.96 H 873.5 v 42.71 h 39.73 c 5.31,0 8.76,-0.28 13.2,-0.96 z"
-   id="path182" />
-
-	<path
-   d="m 951.34,136.72 c -5.55,0 -8.64,0.14 -12.96,0.41 0.74,-4.96 0.99,-9.51 0.99,-15.98 V 48.41 c 0,-6.48 -0.25,-10.33 -0.99,-15.15 h 9.75 c -0.74,4.96 -0.99,8.4 -0.99,15.15 v 80.32 h 39.98 c 5.55,0 8.64,-0.28 13.45,-0.96 v 9.92 c -3.83,-0.69 -7.03,-0.96 -13.45,-0.96 h -35.78 z"
-   id="path184" />
-
-	<path
-   d="m 1023.04,136.72 c -5.55,0 -8.64,0.14 -12.96,0.41 0.74,-4.96 0.99,-9.51 0.99,-15.98 V 48.41 c 0,-6.48 -0.25,-10.33 -0.99,-15.15 h 9.75 c -0.74,4.96 -0.99,8.4 -0.99,15.15 v 80.32 h 39.98 c 5.55,0 8.64,-0.28 13.45,-0.96 v 9.92 c -3.83,-0.69 -7.03,-0.96 -13.45,-0.96 h -35.78 z"
-   id="path186" />
-
-	<path
-   d="m 1156.7,85.06 c 0,32.79 -16.17,53.59 -41.71,53.59 -25.54,0 -41.71,-20.8 -41.71,-53.59 0,-17.36 4.69,-31.96 13.2,-41.33 7.4,-8.13 17.15,-12.4 28.51,-12.4 25.55,0 41.71,20.94 41.71,53.73 z m -19.37,35.96 c 7.16,-7.99 11.23,-20.94 11.23,-36.1 0,-15.43 -3.83,-27.69 -11.11,-35.82 -5.92,-6.48 -13.57,-9.92 -22.33,-9.92 -20.36,0 -33.69,18.19 -33.69,45.74 0,27.42 13.57,45.74 33.81,45.74 8.76,0 16.29,-3.31 22.09,-9.64 z"
-   id="path188" />
-
-</g>
-      <g
-         id="g192">
-</g>
-      <g
-         id="g194">
-</g>
-      <g
-         id="g196">
-</g>
-      <g
-         id="g198">
-</g>
-      <g
-         id="g200">
-</g>
-      <g
-         id="g202">
-</g>
-      <g
-         id="g204">
-</g>
-      <g
-         id="g206">
-</g>
-      <g
-         id="g208">
-</g>
-      <g
-         id="g210">
-</g>
-      <g
-         id="g212">
-</g>
-      <g
-         id="g214">
-</g>
-      <g
-         id="g216">
-</g>
-      <g
-         id="g218">
-</g>
-      <g
-         id="g220">
-</g>
-    </g>
-  </g>
-  <defs
-     id="defs9" />
-  <g
-     inkscape:label="Calque 1"
-     inkscape:groupmode="layer"
-     id="layer1"
-     class="end">
-    <g
-       id="g248"
-       transform="matrix(0.26458333,0,0,0.43008994,-148.28788,1.2429001)">
-      <g
-         id="g190">
-	<path
-   d="m 847.95,33.25 c -0.74,5.24 -0.99,8.4 -0.99,14.6 v 73.98 c 0,6.48 0.25,9.78 0.99,14.88 h -9.75 c 0.74,-4.82 0.99,-8.54 0.99,-14.88 V 86.02 h -57.5 v 35.82 c 0,6.61 0.25,10.2 0.99,14.88 h -9.75 c 0.74,-4.82 0.99,-8.4 0.99,-14.88 V 48.13 c 0,-6.34 -0.25,-10.2 -0.99,-14.88 h 9.75 c -0.74,4.96 -0.99,8.4 -0.99,14.6 v 30.17 h 57.5 v -29.9 c 0,-6.2 -0.25,-10.2 -0.99,-14.88 h 9.75 z"
-   id="path180" />
-
-	<path
-   d="m 926.43,137.69 c -3.83,-0.69 -6.91,-0.96 -13.2,-0.96 h -35.66 c -5.55,0 -8.51,0.14 -12.96,0.41 0.74,-5.1 0.99,-9.37 0.99,-15.84 V 48 c 0,-5.51 -0.25,-9.37 -0.99,-15.16 4.44,0.28 7.4,0.41 12.96,0.41 h 34.55 c 5.31,0 9.01,-0.28 13.33,-0.96 v 9.78 c -4.07,-0.69 -7.28,-0.96 -13.33,-0.96 h -38.5 v 37.2 h 32.95 c 5.31,0 8.51,-0.28 13.33,-0.96 v 9.78 c -4.2,-0.69 -7.16,-0.96 -13.33,-0.96 H 873.5 v 42.71 h 39.73 c 5.31,0 8.76,-0.28 13.2,-0.96 z"
-   id="path182" />
-
-	<path
-   d="m 951.34,136.72 c -5.55,0 -8.64,0.14 -12.96,0.41 0.74,-4.96 0.99,-9.51 0.99,-15.98 V 48.41 c 0,-6.48 -0.25,-10.33 -0.99,-15.15 h 9.75 c -0.74,4.96 -0.99,8.4 -0.99,15.15 v 80.32 h 39.98 c 5.55,0 8.64,-0.28 13.45,-0.96 v 9.92 c -3.83,-0.69 -7.03,-0.96 -13.45,-0.96 h -35.78 z"
-   id="path184" />
-
-	<path
-   d="m 1023.04,136.72 c -5.55,0 -8.64,0.14 -12.96,0.41 0.74,-4.96 0.99,-9.51 0.99,-15.98 V 48.41 c 0,-6.48 -0.25,-10.33 -0.99,-15.15 h 9.75 c -0.74,4.96 -0.99,8.4 -0.99,15.15 v 80.32 h 39.98 c 5.55,0 8.64,-0.28 13.45,-0.96 v 9.92 c -3.83,-0.69 -7.03,-0.96 -13.45,-0.96 h -35.78 z"
-   id="path186" />
-
-	<path
-   d="m 1156.7,85.06 c 0,32.79 -16.17,53.59 -41.71,53.59 -25.54,0 -41.71,-20.8 -41.71,-53.59 0,-17.36 4.69,-31.96 13.2,-41.33 7.4,-8.13 17.15,-12.4 28.51,-12.4 25.55,0 41.71,20.94 41.71,53.73 z m -19.37,35.96 c 7.16,-7.99 11.23,-20.94 11.23,-36.1 0,-15.43 -3.83,-27.69 -11.11,-35.82 -5.92,-6.48 -13.57,-9.92 -22.33,-9.92 -20.36,0 -33.69,18.19 -33.69,45.74 0,27.42 13.57,45.74 33.81,45.74 8.76,0 16.29,-3.31 22.09,-9.64 z"
-   id="path188" />
-
-</g>
-      <g
-         id="g192">
-</g>
-      <g
-         id="g194">
-</g>
-      <g
-         id="g196">
-</g>
-      <g
-         id="g198">
-</g>
-      <g
-         id="g200">
-</g>
-      <g
-         id="g202">
-</g>
-      <g
-         id="g204">
-</g>
-      <g
-         id="g206">
-</g>
-      <g
-         id="g208">
-</g>
-      <g
-         id="g210">
-</g>
-      <g
-         id="g212">
-</g>
-      <g
-         id="g214">
-</g>
-      <g
-         id="g216">
-</g>
-      <g
-         id="g218">
-</g>
-      <g
-         id="g220">
-</g>
-    </g>
-  </g>
+<svg class="svg-one" width="210mm" height="297mm" viewBox="0 0 210 297" preserveAspectRatio="none">
+<path d="M76.066 32.988c-.196 1.386-.262 2.222-.262 3.863v19.574c0 1.714.066 2.587.262 3.937h-2.58c.196-1.276.262-2.26.262-3.937V46.95H58.534v9.477c0 1.75.066 2.699.262 3.937h-2.58c.196-1.275.262-2.222.262-3.937V36.925c0-1.678-.066-2.699-.261-3.937h2.58c-.197 1.312-.263 2.222-.263 3.863v7.982h15.214v-7.91c0-1.641-.066-2.7-.262-3.938h2.58zM96.83 60.62c-1.013-.182-1.828-.253-3.492-.253h-9.435c-1.469 0-2.252.037-3.43.108.196-1.349.262-2.479.262-4.19V36.89c0-1.457-.066-2.479-.261-4.01 1.174.073 1.957.108 3.429.108h9.14c1.406 0 2.385-.074 3.528-.254v2.587c-1.077-.182-1.926-.254-3.527-.254H82.857v9.843h8.718c1.405 0 2.252-.074 3.527-.254v2.588c-1.11-.183-1.894-.254-3.527-.254h-8.75v11.3h10.513c1.404 0 2.317-.074 3.492-.254zM103.42 60.364c-1.468 0-2.285.037-3.428.109.196-1.313.262-2.516.262-4.228V36.999c0-1.715-.066-2.733-.262-4.009h2.58c-.196 1.313-.262 2.223-.262 4.009V58.25h10.578c1.468 0 2.286-.074 3.558-.254v2.625c-1.013-.183-1.86-.254-3.558-.254h-9.467zM122.391 60.364c-1.468 0-2.286.037-3.429.109.196-1.313.262-2.516.262-4.228V36.999c0-1.715-.066-2.733-.262-4.009h2.58c-.196 1.313-.262 2.223-.262 4.009V58.25h10.578c1.469 0 2.286-.074 3.559-.254v2.625c-1.013-.183-1.86-.254-3.559-.254h-9.467zM157.756 46.696c0 8.676-4.279 14.179-11.036 14.179-6.758 0-11.036-5.503-11.036-14.18 0-4.592 1.241-8.455 3.493-10.934 1.958-2.151 4.537-3.281 7.543-3.281 6.76 0 11.036 5.54 11.036 14.216zm-5.125 9.514c1.894-2.114 2.97-5.54 2.97-9.551 0-4.083-1.012-7.327-2.939-9.478-1.566-1.714-3.59-2.624-5.908-2.624-5.387 0-8.914 4.813-8.914 12.102 0 7.255 3.59 12.102 8.946 12.102 2.318 0 4.31-.876 5.845-2.55z"/>
 </svg>
-<div>
 <div class="all-pics" id="pics">
   <%= image_tag("HELLOVECTO-1.png", class: "img-one img") %> <br>
   <%= image_tag("my-name-is.png", class: "img-two img") %> <br>
