--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,10 +14,18 @@
 </div>
 <div class="carrousel">
 </div>
+<div class="down" id="description">
+</div>
 <div class="all-pics" id="pics">
-<svg class="svg-one" viewBox="0 0 210 297" preserveAspectRatio="none">
-<path d="M76.066 32.988c-.196 1.386-.262 2.222-.262 3.863v19.574c0 1.714.066 2.587.262 3.937h-2.58c.196-1.276.262-2.26.262-3.937V46.95H58.534v9.477c0 1.75.066 2.699.262 3.937h-2.58c.196-1.275.262-2.222.262-3.937V36.925c0-1.678-.066-2.699-.261-3.937h2.58c-.197 1.312-.263 2.222-.263 3.863v7.982h15.214v-7.91c0-1.641-.066-2.7-.262-3.938h2.58zM96.83 60.62c-1.013-.182-1.828-.253-3.492-.253h-9.435c-1.469 0-2.252.037-3.43.108.196-1.349.262-2.479.262-4.19V36.89c0-1.457-.066-2.479-.261-4.01 1.174.073 1.957.108 3.429.108h9.14c1.406 0 2.385-.074 3.528-.254v2.587c-1.077-.182-1.926-.254-3.527-.254H82.857v9.843h8.718c1.405 0 2.252-.074 3.527-.254v2.588c-1.11-.183-1.894-.254-3.527-.254h-8.75v11.3h10.513c1.404 0 2.317-.074 3.492-.254zM103.42 60.364c-1.468 0-2.285.037-3.428.109.196-1.313.262-2.516.262-4.228V36.999c0-1.715-.066-2.733-.262-4.009h2.58c-.196 1.313-.262 2.223-.262 4.009V58.25h10.578c1.468 0 2.286-.074 3.558-.254v2.625c-1.013-.183-1.86-.254-3.558-.254h-9.467zM122.391 60.364c-1.468 0-2.286.037-3.429.109.196-1.313.262-2.516.262-4.228V36.999c0-1.715-.066-2.733-.262-4.009h2.58c-.196 1.313-.262 2.223-.262 4.009V58.25h10.578c1.469 0 2.286-.074 3.559-.254v2.625c-1.013-.183-1.86-.254-3.559-.254h-9.467zM157.756 46.696c0 8.676-4.279 14.179-11.036 14.179-6.758 0-11.036-5.503-11.036-14.18 0-4.592 1.241-8.455 3.493-10.934 1.958-2.151 4.537-3.281 7.543-3.281 6.76 0 11.036 5.54 11.036 14.216zm-5.125 9.514c1.894-2.114 2.97-5.54 2.97-9.551 0-4.083-1.012-7.327-2.939-9.478-1.566-1.714-3.59-2.624-5.908-2.624-5.387 0-8.914 4.813-8.914 12.102 0 7.255 3.59 12.102 8.946 12.102 2.318 0 4.31-.876 5.845-2.55z"/>
-</svg>
+ <%= image_tag("HELLOVECTO-1.png", class: "img-one") %> <br>
+ <%= image_tag("my-name-is.png", class: "img-two") %> <br>
+ <%= image_tag("edouard=nardon.png", class: "img-three") %> <br>
+ <%= image_tag("iam.png", class: "img-four") %> <br>
+ <%= image_tag("basedinny.png", class: "img-five") %> <br>
+ <%= image_tag("foranyenquiries.png", class: "img-six") %> <br>
+ <%= image_tag("pleasesend.png", class: "img-seven") %> <br>
+ <a href = "mailto:edouardnardon@gmail.com" class="mail"><%= image_tag("here.png") %></a>
+</div>
 <div class="back">
   <%= link_to root_path(anchor:"up") do %>
     <%= image_tag("arrow.png", width: 90, height: 90) %>
