--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -85,38 +85,39 @@
 }
 
 .img-one {
-  height: 62px;
-  width: 202px;
+  height: 94px;
+  display: block;
+  width: 222px;
 }
 
 .img-two {
-  height: 63px;
-  width: 383px;
+  height: 85px;
+  width: 455px;
 }
 
 .img-three {
-  height: 73px;
-  width: 612px;
+  height: 113px;
+  width: 757px;
 }
 
 .img-four {
-  height: 65px;
-  width: 854px;
+  height: 100px;
+  width: 1218px;
 }
 
 .img-five {
-    height: 65px;
-    width: 807px;
+    height: 108px;
+    width: 884px;
 }
 
 .img-six {
-  height: 70px;
-  width: 634px;
+  height: 99px;
+  width: 671px;
 }
 
 .img-seven {
-  height: 66px;
-  width: 861px;
+  height: 98px;
+  width: 926px;
 }
 
 .mail {
