ok but it is not stretch so

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,7 +24,7 @@
  <%= image_tag("basedinny.png", class: "img-five") %> <br>
  <%= image_tag("foranyenquiries.png", class: "img-six") %> <br>
  <%= image_tag("pleasesend.png", class: "img-seven") %> <br>
- <a href = "mailto:edouardnardon@gmail.com" class="mail"><%= image_tag("here.png") %></a>
+ <a href = "mailto:edouardnardon@gmail.com" class="mail"><%= image_tag("here.png", class:"img-eight") %></a>
 </div>
 <div class="back">
   <%= link_to root_path(anchor:"up") do %>
