--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -67,7 +67,7 @@
 
 .down {
   width: 100%;
-  height: 140px;
+  height: 130px;
   position: sticky;
   top: 0;
   background-color: aqua;
@@ -101,7 +101,7 @@
 
 .img-four {
   height: 100px;
-  width: 1218px;
+  width: 1119px;
 }
 
 .img-five {
@@ -118,10 +118,13 @@
   height: 98px;
   width: 926px;
 }
+.img-eight {
+  height: 107px;
+}
 
 .mail {
-  height: 84px;
-  width: 191px;
+  height: 144px;
+  width: 246px;
 }
 
 .all-pics {
@@ -129,4 +132,8 @@
   flex-direction: column;
   align-items: center;
   position: relative;
+}
+
+img {
+  margin-top: 1.1rem;
 }
