pb with getbouncing

--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -5,12 +5,15 @@
 $body-font: 'Cormorant Garamond', 'serif';
 $headers-font: 'EB Garamond', 'serif';
 
-// To use a font file (.woff) uncomment following lines
-// @font-face {
-//   font-family: "Font Name";
-//   src: font-url('FontFile.eot');
+ //To use a font file (.woff) uncomment following lines
+   @font-face {
+    font-family: 'vrf';
+    src: font-url('AmstelvarAlpha-VF.woff2') format('woff2');
+    font-style: normal;
+ };
+
 //   src: font-url('FontFile.eot?#iefix') format('embedded-opentype'),
 //        font-url('FontFile.woff') format('woff'),
 //        font-url('FontFile.ttf') format('truetype')
 // }
-// $my-font: "Font Name";
+  $my-font: "vrf";
