--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,6 +26,16 @@
  <%= image_tag("pleasesend.png", class: "img-seven") %> <br>
  <a href = "mailto:edouardnardon@gmail.com" class="mail"><%= image_tag("here.png", class:"img-eight") %></a>
 </div>
+<div class="all-pics" id="pics">
+<p class="test one"> HELLO </p>
+<p class="test two"> MY NAME IS </p>
+<p class="test three"> EDOUARD NARDON. </p>
+<p class="test four"> I AM A CREATIVE DIRECTON </p>
+<p class="test five"> BASED IN NEW YORK CITY. </p>
+<p class="test six"> FOR ANY ENQUIRIES, </p>
+<p class="test seven">PLEASE SEND ME AN EMAIL </p>
+<p class="test eight"> HERE </p>
+</div>
 <div class="back">
   <%= link_to root_path(anchor:"up") do %>
     <%= image_tag("arrow.png", width: 90, height: 90) %>
