--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -81,7 +81,7 @@
 .back {
   position: absolute;
   left: 48%;
-  top: 318%;
+  top: 449%;
 }
 
 .img-one {
@@ -136,4 +136,12 @@
 
 img {
   margin-top: 1.1rem;
+}
+
+.test {
+  font-size: 5.5rem;
+  line-height: 1.2;
+  font-family: 'vrf';
+  font-variation-settings: "wght" 76.9721, "wdth" 437.395246, "opsz" 32.4196, "XOPQ" 106.063, "XTRA" 371.5, "YOPQ" 44.4875, "YTLC" 600, "YTSE" 13, "GRAD" 88, "XTCH" 926.111, "YTCH" 1068.3, "YTAS" 808.611, "YTDE" 238.611, "YTUC" 924.583, "YTRA" 908.333;
+  font-weight: 60;
 }
