--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,8 +27,7 @@
  <a href = "mailto:edouardnardon@gmail.com" class="mail"><%= image_tag("here.png", class:"img-eight") %></a>
 </div>
 <div class="all-pics" id="pics">
-<p class="test one be" style='font-variation-settings: "wght" 76.9721, "wdth" 437.395246, "opsz" 32.4196, "XOPQ" 106.063, "XTRA" 371.5, "YOPQ" 44.4875, "YTLC" 600, "YTSE" 13, "GRAD" 88, "XTCH" 926.111, "YTCH" 1068.3, "YTAS" 808.611, "YTDE" 238.611, "YTUC" 924.583, "YTRA" var(--YTRA);
-  --YTRA: 908.333;'> HELLO </p>
+<p class="test one be"> HELLO </p>
 <p class="test two be"> MY NAME IS </p>
 <p class="test three be"> EDOUARD NARDON. </p>
 <p class="test four be"> I AM A CREATIVE DIRECTON </p>
