lines grow when the first is activated

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,7 +16,16 @@
 </div>
 <div class="down" id="description">
 </div>
-<p class="test one be"> HELLO </p>
+<p class="home-line line-1 be"> HELLO, MY NAME IS </p><br>
+<p class="home-line line-2 be"> ÉDOUARD NARDON. </p><br>
+<p class="home-line line-3 be"> I AM A CREATIVE DIRECTOR </p><br>
+<p class="home-line line-4 be"> BASED IN NEW YORK CITY. </p><br>
+<p class="home-line line-5 be"> I SPECIALIZE IN ART, </p><br>
+<p class="home-line line-6 be"> FASHION AND BEAUTY </p><br>
+<p class="home-line line-7 be"> PROJECTS. </p><br>
+<p class="home-line line-8 be"> FOR ANY ENQUIRIES, </p><br>
+<p class="home-line line-9 be"> PLEASE SEND ME AN EMAIL </p><br>
+<a href="#"><p class="home-line line-10 be">HERE</p></a>
 <div class="back">
   <%= link_to root_path(anchor:"up") do %>
     <%= image_tag("arrow.png", width: 90, height: 90) %>
