deleted accents, not responsive

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,7 +17,7 @@
 <div class="down" id="description">
 </div>
 <p class="home-line line-1 be"> HELLO, MY NAME IS </p><br>
-<p class="home-line line-2 be"> ÉDOUARD NARDON. </p><br>
+<p class="home-line line-2 be"> EDOUARD NARDON. </p><br>
 <p class="home-line line-3 be"> I AM A CREATIVE DIRECTOR </p><br>
 <p class="home-line line-4 be"> BASED IN NEW YORK CITY. </p><br>
 <p class="home-line line-5 be"> I SPECIALIZE IN ART, </p><br>
