--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -87,10 +87,10 @@
 }
 
 .be {
-  font-size: 5.5rem;
-  line-height: 1.2;
+  font-size: 5rem;
+  line-height: 0.7;
   font-family: 'vrf';
-  font-weight: 60;
+  font-weight: 50;
 }
 
 .home-line {
@@ -100,10 +100,23 @@
   transform: translateY(-100%);
   width: 100%;
   // --pos: 0;
-  font-variation-settings: "wght" 50, "wdth" 250, "opsz" 32.4196, "XOPQ" 106.063, "XTRA" 371.5, "YOPQ" 44.4875, "YTLC" 600, "YTSE" 13, "GRAD" 88, "XTCH" 926.111, "YTCH" 1068.3, "YTAS" 808.611, "YTDE" 238.611, "YTUC" 924.583, "YTRA" 400;
+}
+
+.static-line {
+  font-variation-settings: "wght" 50, "wdth" 200, "opsz" 32.4196, "XOPQ" 106.063, "XTRA" 371.5, "YOPQ" 44.4875, "YTLC" 600, "YTSE" 13, "GRAD" 88, "XTCH" 926.111, "YTCH" 1068.3, "YTAS" 808.611, "YTDE" 238.611, "YTUC" 924.583, "YTRA" 300;
 }
 
 .line-grow {
-  font-variation-settings: "wght" 50, "wdth" 250, "opsz" 32.4196, "XOPQ" 106.063, "XTRA" 371.5, "YOPQ" 44.4875, "YTLC" 600, "YTSE" 13, "GRAD" 88, "XTCH" 926.111, "YTCH" 1068.3, "YTAS" 808.611, "YTDE" 238.611, "YTUC" 924.583, "YTRA" var(--ytra);
-  --ytra: 400;
+  font-variation-settings: "wght" 50, "wdth" 200, "opsz" 32.4196, "XOPQ" 106.063, "XTRA" 371.5, "YOPQ" 44.4875, "YTLC" 600, "YTSE" 13, "GRAD" 88, "XTCH" 926.111, "YTCH" 1068.3, "YTAS" 808.611, "YTDE" 238.611, "YTUC" 924.583, "YTRA" var(--ytra);
+  // --ytra: 300;
 }
+
+// .line-grow-up {
+//   font-variation-settings: "wght" 50, "wdth" 200, "opsz" 32.4196, "XOPQ" 106.063, "XTRA" 371.5, "YOPQ" 44.4875, "YTLC" 600, "YTSE" 13, "GRAD" 88, "XTCH" 926.111, "YTCH" 1068.3, "YTAS" 808.611, "YTDE" 238.611, "YTUC" 924.583, "YTRA" var(--ytra);
+//   --ytra: 300;
+// }
+
+// .line-grow-down {
+//   font-variation-settings: "wght" 50, "wdth" 200, "opsz" 32.4196, "XOPQ" 106.063, "XTRA" 371.5, "YOPQ" 44.4875, "YTLC" 600, "YTSE" 13, "GRAD" 88, "XTCH" 926.111, "YTCH" 1068.3, "YTAS" 808.611, "YTDE" 238.611, "YTUC" 924.583, "YTRA" var(--ytra);
+//   --ytra: 1200;
+// }
