--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -70,7 +70,7 @@
 }
 
 .mail:hover {
-  text-decoration-line: none;
+  text-decoration: none;
   color:blue;
 }
 
@@ -81,8 +81,7 @@
 }
 
 .mail {
-  height: 144px;
-  width: 246px;
+  text-decoration: none;
 }
 
 .be {
