--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,7 +23,7 @@
 <p class="home-line static-line be"> BASED IN NEW YORK CITY. </p><br>
 <p class="home-line static-line be"> FOR ANY ENQUIRIES, </p><br>
 <p class="home-line static-line be"> PLEASE SEND ME AN EMAIL </p><br>
-<a href="#"><p class="home-line static-line be">HERE</p></a>
+<a href="#"><p class="home-line static-line be mail">HERE</p></a>
 <div class="back">
   <%= link_to root_path(anchor:"up") do %>
     <%= image_tag("arrow.png", width: 90, height: 90) %>
