--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,8 +22,10 @@
 <p class="home-line static-line be"> I AM A CREATIVE DIRECTOR </p><br>
 <p class="home-line static-line be"> BASED IN NEW YORK CITY. </p><br>
 <p class="home-line static-line be"> FOR ANY ENQUIRIES, </p><br>
-<p class="home-line static-line be"> PLEASE SEND ME AN EMAIL </p><br>
-<a href="#"><p class="home-line static-line be mail">HERE</p></a>
+<p class="home-line static-line be"> PLEASE SEND ME AN EMAIL </p>
+<div class="box-two">
+  <a href="mailto:edouardnardon@gmail.com" class="home-line static-line be mail">HERE </a>
+</div>
 <div class="back">
   <%= link_to root_path(anchor:"up") do %>
     <%= image_tag("arrow.png", width: 90, height: 90) %>
