--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -81,19 +81,49 @@
       <line class="openTwo" x1="631" y1="400" x2="631" y2="401"/>
     </g>
     <g class="stretchThreeTwo">
-      <line class="openTwo" x1="655" y1="400" x2="655" y2="401"/>
+      <line class="openTwo" x1="654.7" y1="400" x2="654.7" y2="401"/>
     </g>
     <g class="stretchFourTwo">
       <line class="openTwo" x1="685.95" y1="400" x2="685.95" y2="401"/>
     </g>
     <g class="stretchFiveTwo">
-      <line class="openTwo" x1="1014.8" y1="177" x2="1014.8" y2="30"/>
+      <line class="openTwo" x1="740" y1="400" x2="740" y2="401"/>
     </g>
     <g class="stretchSixTwo">
-      <line class="openTwo" x1="1078" y1="177" x2="1078" y2="30"/>
+      <line class="openTwo" x1="837" y1="400" x2="837" y2="401"/>
     </g>
-    <g class="stretchLastTwo">
-      <line class="openTwo" x1="1152" y1="177" x2="1153" y2="30" />
+    <g class="stretchSevenTwo">
+      <line class="openTwo" x1="880.1" y1="400" x2="880.1" y2="401"/>
+    </g>
+    <g class="stretchHeightTwo">
+      <line class="openTwo" x1="901.6" y1="400" x2="901.6" y2="401"/>
+    </g>
+    <g class="stretchNineTwo">
+      <line class="openTwo" x1="933.8" y1="400" x2="933.8" y2="401"/>
+    </g>
+    <g class="stretchTenTwo">
+      <line class="openTwo" x1="986.2" y1="400" x2="986.2" y2="401"/>
+    </g>
+    <g class="stretchOne">
+      <line class="openTwo" x1="1018" y1="400" x2="1018" y2="401"/>
+    </g>
+    <g class="stretchElevenTwo">
+      <line class="openTwo" x1="1049.1" y1="400" x2="1049.1" y2="401"/>
+    </g>
+    <g class="stretchTwelveTwo">
+      <line class="openTwo" x1="1073.1" y1="400" x2="1073.1" y2="401"/>
+    </g>
+    <g class="stretchEightTwo">
+      <line class="openTwo" x1="1104.5" y1="400" x2="1104.5" y2="401"/>
+    </g>
+    <g class="stretchThirtheenTwo">
+      <line class="openTwo" x1="1130.9" y1="400" x2="1130.9" y2="401"/>
+    </g>
+    <g class="stretchFour">
+      <line class="openTwo" x1="1249.5" y1="400" x2="1249.5" y2="401"/>
+    </g>
+    <g class="stretchLast">
+      <line class="openTwo" x1="1330" y1="400" x2="1330" y2="401"/>
     </g>
   </g>
 </svg>
